fix: 선택지 정렬